--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.897.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "helmet": "^4.5.0",
-    "mongoose": "^5.12.5",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1"
   },
